pushed from desktop

--- a/module2/lesson_regression_classification_2.ipynb
+++ b/module2/lesson_regression_classification_2.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -160,7 +160,258 @@
     "id": "VRh-FSMTrzoG",
     "outputId": "d3044fb2-4d26-4296-a8ad-f17c126d7650"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Incumbent Party Candidate</th>\n",
+       "      <th>Other Candidate</th>\n",
+       "      <th>Average Recent Growth in Personal Incomes</th>\n",
+       "      <th>US Military Fatalities per Million</th>\n",
+       "      <th>Incumbent Party Vote Share</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1952</td>\n",
+       "      <td>Stevenson</td>\n",
+       "      <td>Eisenhower</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>190</td>\n",
+       "      <td>44.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1956</td>\n",
+       "      <td>Eisenhower</td>\n",
+       "      <td>Stevenson</td>\n",
+       "      <td>2.89</td>\n",
+       "      <td>0</td>\n",
+       "      <td>57.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>Nixon</td>\n",
+       "      <td>Kennedy</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1964</td>\n",
+       "      <td>Johnson</td>\n",
+       "      <td>Goldwater</td>\n",
+       "      <td>4.21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>61.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1968</td>\n",
+       "      <td>Humphrey</td>\n",
+       "      <td>Nixon</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>146</td>\n",
+       "      <td>49.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1972</td>\n",
+       "      <td>Nixon</td>\n",
+       "      <td>McGovern</td>\n",
+       "      <td>3.62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>61.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>Ford</td>\n",
+       "      <td>Carter</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>2</td>\n",
+       "      <td>48.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1980</td>\n",
+       "      <td>Carter</td>\n",
+       "      <td>Reagan</td>\n",
+       "      <td>-0.39</td>\n",
+       "      <td>0</td>\n",
+       "      <td>44.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1984</td>\n",
+       "      <td>Reagan</td>\n",
+       "      <td>Mondale</td>\n",
+       "      <td>3.86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>Bush, Sr.</td>\n",
+       "      <td>Dukakis</td>\n",
+       "      <td>2.27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>Bush, Sr.</td>\n",
+       "      <td>Clinton</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>Clinton</td>\n",
+       "      <td>Dole</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Gore</td>\n",
+       "      <td>Bush, Jr.</td>\n",
+       "      <td>2.36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Bush, Jr.</td>\n",
+       "      <td>Kerry</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>4</td>\n",
+       "      <td>51.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>McCain</td>\n",
+       "      <td>Obama</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>14</td>\n",
+       "      <td>46.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Obama</td>\n",
+       "      <td>Romney</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>5</td>\n",
+       "      <td>52.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Clinton</td>\n",
+       "      <td>Trump</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>48.20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year Incumbent Party Candidate Other Candidate  \\\n",
+       "0   1952                 Stevenson      Eisenhower   \n",
+       "1   1956                Eisenhower       Stevenson   \n",
+       "2   1960                     Nixon         Kennedy   \n",
+       "3   1964                   Johnson       Goldwater   \n",
+       "4   1968                  Humphrey           Nixon   \n",
+       "5   1972                     Nixon        McGovern   \n",
+       "6   1976                      Ford          Carter   \n",
+       "7   1980                    Carter          Reagan   \n",
+       "8   1984                    Reagan         Mondale   \n",
+       "9   1988                 Bush, Sr.         Dukakis   \n",
+       "10  1992                 Bush, Sr.         Clinton   \n",
+       "11  1996                   Clinton            Dole   \n",
+       "12  2000                      Gore       Bush, Jr.   \n",
+       "13  2004                 Bush, Jr.           Kerry   \n",
+       "14  2008                    McCain           Obama   \n",
+       "15  2012                     Obama          Romney   \n",
+       "16  2016                   Clinton           Trump   \n",
+       "\n",
+       "    Average Recent Growth in Personal Incomes  \\\n",
+       "0                                        2.40   \n",
+       "1                                        2.89   \n",
+       "2                                        0.85   \n",
+       "3                                        4.21   \n",
+       "4                                        3.02   \n",
+       "5                                        3.62   \n",
+       "6                                        1.08   \n",
+       "7                                       -0.39   \n",
+       "8                                        3.86   \n",
+       "9                                        2.27   \n",
+       "10                                       0.38   \n",
+       "11                                       1.04   \n",
+       "12                                       2.36   \n",
+       "13                                       1.72   \n",
+       "14                                       0.10   \n",
+       "15                                       0.95   \n",
+       "16                                       0.10   \n",
+       "\n",
+       "    US Military Fatalities per Million  Incumbent Party Vote Share  \n",
+       "0                                  190                       44.60  \n",
+       "1                                    0                       57.76  \n",
+       "2                                    0                       49.91  \n",
+       "3                                    1                       61.34  \n",
+       "4                                  146                       49.60  \n",
+       "5                                    0                       61.79  \n",
+       "6                                    2                       48.95  \n",
+       "7                                    0                       44.70  \n",
+       "8                                    0                       59.17  \n",
+       "9                                    0                       53.94  \n",
+       "10                                   0                       46.55  \n",
+       "11                                   0                       54.74  \n",
+       "12                                   0                       50.27  \n",
+       "13                                   4                       51.24  \n",
+       "14                                  14                       46.32  \n",
+       "15                                   5                       52.00  \n",
+       "16                                   5                       48.20  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('../data/elections/bread_peace_voting.csv')\n",
@@ -1722,8 +1973,7 @@
     },
     "colab_type": "code",
     "id": "YShWjZrIrzoP",
-    "outputId": "3a7101a1-3f88-4651-dafb-07a79ebb1203",
-    "scrolled": false
+    "outputId": "3a7101a1-3f88-4651-dafb-07a79ebb1203"
    },
    "outputs": [],
    "source": [
@@ -1865,5 +2115,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
