--- a/module3/assignment_regression_classification_3.ipynb
+++ b/module3/assignment_regression_classification_3.ipynb
@@ -60,13 +60,13 @@
         "\n",
         "The [NYC Department of Finance](https://www1.nyc.gov/site/finance/taxes/property-rolling-sales-data.page) has a glossary of property sales terms and NYC Building Class Code Descriptions. The data comes from the [NYC OpenData](https://data.cityofnewyork.us/browse?q=NYC%20calendar%20sales) portal.\n",
         "\n",
-        "- [ ] Do train/test split. Use data from January — March 2019 to train. Use data from April 2019 to test.\n",
-        "- [ ] Do one-hot encoding of categorical features.\n",
-        "- [ ] Do feature selection with `SelectKBest`.\n",
-        "- [ ] Do [feature scaling](https://scikit-learn.org/stable/modules/preprocessing.html).\n",
-        "- [ ] Fit a ridge regression model with multiple features.\n",
-        "- [ ] Get mean absolute error for the test set.\n",
-        "- [ ] As always, commit your notebook to your fork of the GitHub repo.\n",
+        "- [X] Do train/test split. Use data from January — March 2019 to train. Use data from April 2019 to test.\n",
+        "- [X] Do one-hot encoding of categorical features.\n",
+        "- [X] Do feature selection with `SelectKBest`.\n",
+        "- [X] Do [feature scaling](https://scikit-learn.org/stable/modules/preprocessing.html).\n",
+        "- [X] Fit a ridge regression model with multiple features.\n",
+        "- [X] Get mean absolute error for the test set.\n",
+        "- [X] As always, commit your notebook to your fork of the GitHub repo.\n",
         "\n",
         "\n",
         "## Stretch Goals\n",
@@ -10265,25 +10265,125 @@
         "colab_type": "text"
       },
       "source": [
-        "### Again with feature scaling"
+        "### Again with feature scaling and looping to find the best choice of k for our selector"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HONyLavWFTIM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 510
+        },
+        "outputId": "68a49e0b-e916-4512-91d8-dfccf7b77eac"
+      },
+      "source": [
+        "scaler = StandardScaler()\n",
+        "\n",
+        "X_train_scaled = scaler.fit_transform(X_train,y_train)\n",
+        "X_test_scaled = scaler.transform(X_test)\n",
+        "\n",
+        "no_cols =  X_train.shape[1]\n",
+        "\n",
+        "for k in range(1,no_cols+1):\n",
+        "  selector = SelectKBest(score_func = f_regression, k=k)\n",
+        "  X_train_selected = selector.fit_transform(X_train,y_train)\n",
+        "  X_test_selected = selector.transform(X_test)\n",
+        "  \n",
+        "  model_selected = Ridge()\n",
+        "  model_selected.fit(X_train_selected,np.array(y_train))\n",
+        "  \n",
+        "  y_pred_selected = model_selected.predict(X_test_selected)\n",
+        "  \n",
+        "  mae = mean_absolute_error(y_pred_selected,np.array(y_test))\n",
+        "  print(f\"mae for k = {k}:\\t  ${mae:,.0f}\")"
+      ],
+      "execution_count": 334,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "mae for k = 1:\t  $284,254\n",
+            "mae for k = 2:\t  $284,409\n",
+            "mae for k = 3:\t  $274,817\n",
+            "mae for k = 4:\t  $274,406\n",
+            "mae for k = 5:\t  $272,254\n",
+            "mae for k = 6:\t  $268,412\n",
+            "mae for k = 7:\t  $263,895\n",
+            "mae for k = 8:\t  $263,712\n",
+            "mae for k = 9:\t  $261,901\n",
+            "mae for k = 10:\t  $260,966\n",
+            "mae for k = 11:\t  $260,858\n",
+            "mae for k = 12:\t  $261,005\n",
+            "mae for k = 13:\t  $260,050\n",
+            "mae for k = 14:\t  $259,196\n",
+            "mae for k = 15:\t  $259,165\n",
+            "mae for k = 16:\t  $259,006\n",
+            "mae for k = 17:\t  $258,898\n",
+            "mae for k = 18:\t  $257,238\n",
+            "mae for k = 19:\t  $252,313\n",
+            "mae for k = 20:\t  $252,224\n",
+            "mae for k = 21:\t  $252,237\n",
+            "mae for k = 22:\t  $252,271\n",
+            "mae for k = 23:\t  $252,314\n",
+            "mae for k = 24:\t  $252,506\n",
+            "mae for k = 25:\t  $252,494\n",
+            "mae for k = 26:\t  $252,492\n",
+            "mae for k = 27:\t  $252,484\n",
+            "mae for k = 28:\t  $252,461\n",
+            "mae for k = 29:\t  $252,499\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DET1ujsQ6mDX",
+        "id": "Z6x1q0lyI0Jf",
         "colab_type": "text"
       },
       "source": [
+        "# Lessons learned\n",
+        "Why use one-hot-encoding vs choosing your own conversion: (eg. low, medium, high ---> 1,2,3)\n",
         "\n",
-        "- [ ] Do train/test split. Use data from January — March 2019 to train. Use data from April 2019 to test.\n",
-        "- [ ] Do one-hot encoding of categorical features.\n",
-        "- [ ] Do feature selection with `SelectKBest`.\n",
-        "- [ ] Do [feature scaling](https://scikit-learn.org/stable/modules/preprocessing.html).\n",
-        "- [ ] Fit a ridge regression model with multiple features.\n",
-        "- [ ] Get mean absolute error for the test set.\n",
-        "- [ ] As always, commit your notebook to your fork of the GitHub repo."
+        "one hot encoding will look at the columns and assign in the order they appear\n",
+        "eg. if you have a column being OHE'd with the data:\n",
+        "\n",
+        "med\n",
+        "\n",
+        "high\n",
+        "\n",
+        "high\n",
+        "\n",
+        "low\n",
+        "\n",
+        ".\n",
+        "\n",
+        ".\n",
+        "\n",
+        ".\n",
+        "\n",
+        "\n",
+        "then it gets encoded in the order: med, high, low\n",
+        "\n",
+        "if we used a scaler, or selector in conjuction for this linear model, the same order would be seen. So this is always consistent"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-2xkTyzCJX2M",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
