--- a/module3/Vera_Mendes_Assignment_regression_classification_3.ipynb
+++ b/module3/Vera_Mendes_Assignment_regression_classification_3.ipynb
@@ -332,7 +332,8 @@
         "import seaborn as sns\n",
         "import category_encoders as ce\n",
         "from sklearn.linear_model import Ridge\n",
-        "from sklearn.preprocessing import scale"
+        "from sklearn.preprocessing import scale\n",
+        "from sklearn.preprocessing import StandardScaler"
       ],
       "execution_count": 0,
       "outputs": []
@@ -10153,14 +10154,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 360
         },
-        "outputId": "f1a50695-ef22-41f3-8ac7-de896b62f1f8"
+        "outputId": "bf39121f-bfb5-4476-ec7e-abd6c4b2b7ea"
       },
       "source": [
         "df1 = df.loc[condition]\n",
         "print(df1.shape)\n",
         "df1.head()"
       ],
-      "execution_count": 35,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -10353,7 +10354,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 82
         }
       ]
     },
@@ -12621,6 +12622,69 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aqlg7ouuWrhe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# scaling \n",
+        "\n",
+        "X_train_scaled = scale(X_train)\n",
+        "X_test_scaled = scale(X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EOWt0CNwZQcs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "y_train_scaled = scale(y_train)\n",
+        "y_test_scaled = scale(y_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_lhBpHxHW3Kz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f2013e2e-b651-4017-cbc3-dbcc995ae338"
+      },
+      "source": [
+        "# instantiate this class\n",
+        "model3 = Ridge()\n",
+        "\n",
+        "# fitting the model to my data\n",
+        "ridge_reg_data = model3.fit(X_train_scaled, y_train_scaled)\n",
+        "\n",
+        "# TEST MAE:\n",
+        "test_mae = mean_absolute_error(y_test_scaled, ridge_reg_data.predict(X_test_scaled))\n",
+        "print('Test Mean_Absolute_error:', test_mae)"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Mean_Absolute_error: 0.5294307798087904\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
