--- a/module3/Vera_Mendes_Assignment_regression_classification_3.ipynb
+++ b/module3/Vera_Mendes_Assignment_regression_classification_3.ipynb
@@ -11237,11 +11237,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "fd4a2f78-c6ea-41a7-e8c8-c2069dc0f217"
+        "outputId": "a5fa1b66-8186-4028-a5df-bb966b943a84"
       },
       "source": [
         "# fitting ridge to my data\n",
-        "\n",
+        "model1 = Ridge()\n",
         "# fitting the model to my data\n",
         "ridge_reg_data = model1.fit(X_train_scaled, y_train)\n",
         "\n",
@@ -11249,7 +11249,7 @@
         "test_mae = mean_absolute_error(y_test, ridge_reg_data.predict(X_test_scaled))\n",
         "print('Test Mean_Absolute_error:', test_mae)"
       ],
-      "execution_count": 23,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
