--- a/module4/assignment_regression_classification_4.ipynb
+++ b/module4/assignment_regression_classification_4.ipynb
@@ -131,6 +131,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting kaggle\n",
+      "  Downloading https://files.pythonhosted.org/packages/62/ab/bb20f9b9e24f9a6250f95a432f8d9a7d745f8d24039d7a5a6eaadb7783ba/kaggle-1.5.6.tar.gz (58kB)\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (1.24.2)\n",
+      "Requirement already satisfied: six>=1.10 in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (1.12.0)\n",
+      "Requirement already satisfied: certifi in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (2019.6.16)\n",
+      "Requirement already satisfied: python-dateutil in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (2.8.0)\n",
+      "Requirement already satisfied: requests in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (2.22.0)\n",
+      "Requirement already satisfied: tqdm in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (4.32.1)\n",
+      "Collecting python-slugify (from kaggle)\n",
+      "  Downloading https://files.pythonhosted.org/packages/f5/ef/c868a9ac657405f051a8a501ac5633e769c54228716b8db7f8d717977e57/python-slugify-3.0.4.tar.gz\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->kaggle) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->kaggle) (2.8)\n",
+      "Collecting text-unidecode>=1.3 (from python-slugify->kaggle)\n",
+      "  Downloading https://files.pythonhosted.org/packages/a6/a5/c0b6468d3824fe3fde30dbb5e1f687b291608f9473681bbf7dabbf5a87d7/text_unidecode-1.3-py2.py3-none-any.whl (78kB)\n",
+      "Building wheels for collected packages: kaggle, python-slugify\n",
+      "  Building wheel for kaggle (setup.py): started\n",
+      "  Building wheel for kaggle (setup.py): finished with status 'done'\n",
+      "  Stored in directory: C:\\Users\\serga\\AppData\\Local\\pip\\Cache\\wheels\\57\\4e\\e8\\bb28d035162fb8f17f8ca5d42c3230e284c6aa565b42b72674\n",
+      "  Building wheel for python-slugify (setup.py): started\n",
+      "  Building wheel for python-slugify (setup.py): finished with status 'done'\n",
+      "  Stored in directory: C:\\Users\\serga\\AppData\\Local\\pip\\Cache\\wheels\\24\\23\\f5\\c260686f9180cd755a30123e607207e0f39eba249b7b4b432c\n",
+      "Successfully built kaggle python-slugify\n",
+      "Installing collected packages: text-unidecode, python-slugify, kaggle\n",
+      "Successfully installed kaggle-1.5.6 python-slugify-3.0.4 text-unidecode-1.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "colab": {},
@@ -159,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
