--- a/module4/Mikio_Harman_assignment_regression_classification_4.ipynb
+++ b/module4/Mikio_Harman_assignment_regression_classification_4.ipynb
@@ -1960,7 +1960,8 @@
         "            'extraction_type',\n",
         "            'region',\n",
         "            'lga',\n",
-        "            'date_recorded']\n",
+        "            'date_recorded',\n",
+        "            'funder']\n",
         "\n",
         "X_train = my_train[features]\n",
         "y_train = my_train[target]\n",
@@ -2032,36 +2033,28 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 89
+          "height": 34
         },
-        "outputId": "b54fdfee-8090-4ef4-919d-8920e4e088b2"
+        "outputId": "94fe74df-083b-4819-a1ff-4b82e54e90d5"
       },
       "source": [
-        "model = LogisticRegressionCV(cv=10, n_jobs=-1, random_state=90, multi_class='auto')\n",
+        "model = LogisticRegressionCV(cv=10, n_jobs=-1, random_state=90, multi_class='auto', max_iter=1000)\n",
         "model.fit(X_train_scaled, y_train)\n",
         "model.score(X_val_scaled, y_val)"
       ],
-      "execution_count": 100,
+      "execution_count": 111,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:947: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-            "  \"of iterations.\", ConvergenceWarning)\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7476767676767677"
+              "0.7605387205387205"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 100
+          "execution_count": 111
         }
       ]
     },
@@ -2084,24 +2077,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "aebc0ed5-a8e3-407f-c092-51e41abe0ba7"
+        "outputId": "143a318f-158f-473d-bf10-a30796728533"
       },
       "source": [
         "X_train_encoded.shape"
       ],
-      "execution_count": 101,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(44550, 650)"
+              "(44550, 2295)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 101
+          "execution_count": 112
         }
       ]
     },
@@ -2311,7 +2304,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "1dbf1a55-4bf1-4852-fa7f-9069e8d73438"
+        "outputId": "0d3fbf46-0bd5-45a0-98e8-a12fb1926cc3"
       },
       "source": [
         "#Kaggle Submission\n",
@@ -2323,12 +2316,12 @@
         "\n",
         "print(y_pred)"
       ],
-      "execution_count": 102,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0 1 1 ... 1 1 0]\n"
+            "[1 1 1 ... 1 1 0]\n"
           ],
           "name": "stdout"
         }
@@ -2343,14 +2336,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 330
         },
-        "outputId": "0d143a81-a289-48c5-c0e6-58f73626644e"
+        "outputId": "b2695f81-ae36-42b7-d085-9dda15c774f0"
       },
       "source": [
         "submission = test_features[['id']]\n",
         "submission['status_group'] = y_pred\n",
         "submission.head()"
       ],
-      "execution_count": 103,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
@@ -2394,7 +2387,7 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>50785</td>\n",
-              "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -2422,7 +2415,7 @@
             ],
             "text/plain": [
               "      id  status_group\n",
-              "0  50785             0\n",
+              "0  50785             1\n",
               "1  51630             1\n",
               "2  17168             1\n",
               "3  45559             0\n",
@@ -2432,7 +2425,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 103
+          "execution_count": 114
         }
       ]
     },
