--- a/module3/Zhenya_Warshavsky_assignment_regression_classification_3.ipynb
+++ b/module3/Zhenya_Warshavsky_assignment_regression_classification_3.ipynb
@@ -2773,7 +2773,8 @@
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.scatter(alphas, mses);"
+    "plt.scatter(alphas, mses);\n",
+    "plt.xlim()"
    ]
   }
  ],
