--- a/module4/assignment_regression_classification_4.ipynb
+++ b/module4/assignment_regression_classification_4.ipynb
@@ -450,7 +450,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "outputId": "8bf6af74-9e4a-4c9b-b4c2-4de5a64ded62"
+        "outputId": "3fefbc8f-92c3-4b9c-936c-e5554d883454"
       },
       "source": [
         "import category_encoders as ce\n",
@@ -458,7 +458,7 @@
         "from sklearn.impute import SimpleImputer\n",
         "\n",
         "features = [\"lga\", \"population\", \"management\", \"permit\", \"gps_height\", \"region\", \"basin\", \"payment\", \"longitude\", \"latitude\", \"waterpoint_type\", \"extraction_type\", \"water_quality\", \"quantity\", \"source\"]\n",
-        "features=[\"waterpoint_type\", \"extraction_type\", \"water_quality\", \"quantity\", \"source\"]\n",
+        "features=[\"waterpoint_type\", \"extraction_type\", \"quantity_group\", \"basin\", \"quality_group\", \"source_type\", \"lga\", \"management_group\"]\n",
         "X_train = train_features[features]\n",
         "X_test = test_features[features]\n",
         "y_train = train_labels[\"status_group\"]\n",
@@ -475,14 +475,19 @@
         "\n",
         "model = LogisticRegressionCV(verbose=0)\n",
         "model.fit(X_train, y_train)\n",
-        "print(model.score(X_train, train_labels[\"status_group\"]))\n"
+        "print(model.score(X_train, train_labels[\"status_group\"]))\n",
+        "\n",
+        "y_pred = model.predict(X_test_imputed)\n",
+        "submission = sample_submission.copy()\n",
+        "submission[\"status_group\"] = y_pred\n",
+        "submission.to_csv('rosie-lasota-submission.csv', index=False)\n"
       ],
-      "execution_count": 113,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.7123063973063973\n"
+            "0.7350673400673401\n"
           ],
           "name": "stdout"
         }
@@ -496,16 +501,7 @@
         "colab": {}
       },
       "source": [
-        "y_pred = model.predict(X_test_imputed)\n",
-        "\n",
-        "# Makes a dataframe with two columns, id and status_group, \n",
-        "# and writes to a csv file, without the index\n",
-        "\n",
-        "submission = sample_submission.copy()\n",
-        "submission['status_group'] = y_pred\n",
-        "submission[\"status_group\"].replace({-1: \"non functional\", 1: \"functional\"})\n",
-        "\n",
-        "submission.to_csv('rosie-lasota-submission.csv', index=False)"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
