--- a/module4/assignment_regression_classification_4.ipynb
+++ b/module4/assignment_regression_classification_4.ipynb
@@ -244,29 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading ds8-predictive-modeling-challenge.zip to C:\\Users\\serga\\Documents\\GitHub\\DS-Unit-2-Regression-Classification\\module4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|          | 0.00/5.19M [00:00<?, ?B/s]\n",
-      " 19%|#9        | 1.00M/5.19M [00:00<00:02, 2.17MB/s]\n",
-      " 39%|###8      | 2.00M/5.19M [00:00<00:01, 2.16MB/s]\n",
-      " 58%|#####7    | 3.00M/5.19M [00:01<00:01, 2.18MB/s]\n",
-      " 77%|#######7  | 4.00M/5.19M [00:01<00:00, 2.18MB/s]\n",
-      " 96%|#########6| 5.00M/5.19M [00:02<00:00, 2.18MB/s]\n",
-      "100%|##########| 5.19M/5.19M [00:02<00:00, 2.19MB/s]\n"
+      "ds8-predictive-modeling-challenge.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
      ]
     }
    ],
@@ -276,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -294,14 +279,14 @@
     "zf = zipfile.ZipFile('ds8-predictive-modeling-challenge.zip')\n",
     "\n",
     "# available files in the container\n",
-    "print (zip.namelist())\n",
+    "print (zf.namelist())\n",
     "\n",
     "# zipped_df = pd.read_csv('ds8-predictive-modeling-challenge.zip')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +312,7 @@
        "((44550, 40), (14850, 40), (44550, 2), (14850, 2))"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,6 +321,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "train_labels['status_group'] = train_labels['status_group'].replace('functional','2').replace('functional needs repair','1').replace('non functional','0').astype(int)\n",
+    "sample_submission['status_group'] = sample_submission['status_group'].replace('functional','2').replace('functional needs repair','1').replace('non functional','0').astype(int)\n",
     "\n",
     "my_train_features, my_val_features = train_test_split(train_features, random_state=7)\n",
     "my_train_labels, my_val_labels = train_test_split(train_labels, random_state=7)\n",
@@ -344,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -402,7 +388,7 @@
        " 35694  14077             2)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +585,7 @@
        "max          2013.000000  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +875,7 @@
        "waterpoint_type_group  44550      6       communal standpipe  25944"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -932,78 +918,60 @@
        "    <tr>\n",
        "      <th>count</th>\n",
        "      <td>44550.000000</td>\n",
-       "      <td>44550</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>functional</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24254</td>\n",
+       "      <td>44550.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>37159.076992</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.161302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>21461.767613</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.949497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>18560.250000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>37047.500000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>55703.750000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>74247.000000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  id status_group\n",
-       "count   44550.000000        44550\n",
-       "unique           NaN            3\n",
-       "top              NaN   functional\n",
-       "freq             NaN        24254\n",
-       "mean    37159.076992          NaN\n",
-       "std     21461.767613          NaN\n",
-       "min         1.000000          NaN\n",
-       "25%     18560.250000          NaN\n",
-       "50%     37047.500000          NaN\n",
-       "75%     55703.750000          NaN\n",
-       "max     74247.000000          NaN"
+       "                 id  status_group\n",
+       "count  44550.000000  44550.000000\n",
+       "mean   37159.076992      1.161302\n",
+       "std    21461.767613      0.949497\n",
+       "min        1.000000      0.000000\n",
+       "25%    18560.250000      0.000000\n",
+       "50%    37047.500000      2.000000\n",
+       "75%    55703.750000      2.000000\n",
+       "max    74247.000000      2.000000"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,8 +982,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1063,13 +1033,157 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "my_train_features.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    0.544422\n",
+       "0    0.383120\n",
+       "1    0.072458\n",
+       "Name: status_group, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = 'status_group'\n",
+    "y_train = my_train_labels[target]\n",
+    "y_train.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.mode()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "majority_class = y_train.mode()[0]\n",
+    "y_pred = [majority_class] * len(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8386980920314253"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(abs(y_pred - y_train)) / len(y_train)  # How much we got wrong"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5444219977553311"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "baseline_prediction = accuracy_score(y_train, y_pred)\n",
+    "baseline_prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5444219977553311"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_val = my_val_labels[target]\n",
+    "y_pred = [majority_class] * len(y_val)\n",
+    "accuracy_score(y_pred, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'estimator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-29-441b34637a33>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mestimator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0msample_submission\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'sample_submission.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0msubmission\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msample_submission\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0msubmission\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'status_group'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0msubmission\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'your-submission-filename.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'estimator' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = estimator.predict(X_test)\n",
+    "sample_submission = pd.read_csv('sample_submission.csv')\n",
+    "submission = sample_submission.copy()\n",
+    "submission['status_group'] = y_pred\n",
+    "submission.to_csv('your-submission-filename.csv', index=False)"
    ]
   },
   {
