--- a/Copy_of_assignment_regression_classification_3.ipynb
+++ b/Copy_of_assignment_regression_classification_3.ipynb
@@ -1165,7 +1165,7 @@
       "metadata": {
         "id": "Q8_4YPquZ56O",
         "colab_type": "code",
-        "outputId": "f8f97164-a96a-4337-d3c3-7c68a90fcb56",
+        "outputId": "b3c698a9-bdba-4603-db78-682af239c092",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 357
@@ -1174,7 +1174,7 @@
       "source": [
         "train.describe(exclude = 'number')"
       ],
-      "execution_count": 156,
+      "execution_count": 178,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1308,7 +1308,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 156
+          "execution_count": 178
         }
       ]
     },
@@ -1357,12 +1357,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "727b5c9c-7126-4ebf-92db-6ec92743f180"
+        "outputId": "2297e299-cbf2-4871-cc04-19f6b522586b"
       },
       "source": [
         "train.isnull().sum()"
       ],
-      "execution_count": 159,
+      "execution_count": 179,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1395,7 +1395,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 159
+          "execution_count": 179
         }
       ]
     },
@@ -1404,7 +1404,7 @@
       "metadata": {
         "id": "TH1kHQbLcVPH",
         "colab_type": "code",
-        "outputId": "f3c421c5-c5ea-4119-b766-87c3df56df35",
+        "outputId": "ef6db810-4605-4644-cfb7-dcfbd04ded2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
@@ -1412,7 +1412,7 @@
       },
       "source": [
         "target = 'SALE_PRICE'\n",
-        "high_cardinality = ['EASE-MENT', 'NEIGHBORHOOD', 'BUILDING_CLASS_CATEGORY', 'BUILDING_CLASS_AT_PRESENT', 'ADDRESS', 'APARTMENT_NUMBER', 'LAND_SQUARE_FEET', 'BUILDING_CLASS_AT_TIME_OF_SALE', 'SALE_DATE']\n",
+        "high_cardinality = ['EASE-MENT', 'BUILDING_CLASS_AT_PRESENT', 'ADDRESS', 'APARTMENT_NUMBER', 'LAND_SQUARE_FEET', 'BUILDING_CLASS_AT_TIME_OF_SALE', 'SALE_DATE']\n",
         "features = train.columns.drop([target] + high_cardinality)\n",
         "\n",
         "X_train = train[features]\n",
@@ -1423,7 +1423,7 @@
         "# before one-hot encoding\n",
         "X_train.head()"
       ],
-      "execution_count": 160,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1448,6 +1448,8 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>BOROUGH</th>\n",
+              "      <th>NEIGHBORHOOD</th>\n",
+              "      <th>BUILDING_CLASS_CATEGORY</th>\n",
               "      <th>TAX_CLASS_AT_PRESENT</th>\n",
               "      <th>BLOCK</th>\n",
               "      <th>LOT</th>\n",
@@ -1464,6 +1466,8 @@
               "    <tr>\n",
               "      <th>44</th>\n",
               "      <td>3</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
               "      <td>1</td>\n",
               "      <td>5495</td>\n",
               "      <td>801</td>\n",
@@ -1478,6 +1482,8 @@
               "    <tr>\n",
               "      <th>61</th>\n",
               "      <td>4</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
               "      <td>1</td>\n",
               "      <td>7918</td>\n",
               "      <td>72</td>\n",
@@ -1492,6 +1498,8 @@
               "    <tr>\n",
               "      <th>78</th>\n",
               "      <td>2</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
               "      <td>1</td>\n",
               "      <td>4210</td>\n",
               "      <td>19</td>\n",
@@ -1506,6 +1514,8 @@
               "    <tr>\n",
               "      <th>108</th>\n",
               "      <td>3</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
               "      <td>1</td>\n",
               "      <td>5212</td>\n",
               "      <td>69</td>\n",
@@ -1520,6 +1530,8 @@
               "    <tr>\n",
               "      <th>111</th>\n",
               "      <td>3</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
               "      <td>1</td>\n",
               "      <td>7930</td>\n",
               "      <td>121</td>\n",
@@ -1536,20 +1548,20 @@
               "</div>"
             ],
             "text/plain": [
-              "    BOROUGH TAX_CLASS_AT_PRESENT  ...  YEAR_BUILT  TAX_CLASS_AT_TIME_OF_SALE\n",
-              "44        3                    1  ...      1930.0                          1\n",
-              "61        4                    1  ...      1940.0                          1\n",
-              "78        2                    1  ...      1925.0                          1\n",
-              "108       3                    1  ...      1899.0                          1\n",
-              "111       3                    1  ...      1940.0                          1\n",
+              "    BOROUGH NEIGHBORHOOD  ... YEAR_BUILT TAX_CLASS_AT_TIME_OF_SALE\n",
+              "44        3        OTHER  ...     1930.0                         1\n",
+              "61        4        OTHER  ...     1940.0                         1\n",
+              "78        2        OTHER  ...     1925.0                         1\n",
+              "108       3        OTHER  ...     1899.0                         1\n",
+              "111       3        OTHER  ...     1940.0                         1\n",
               "\n",
-              "[5 rows x 11 columns]"
+              "[5 rows x 13 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 160
+          "execution_count": 181
         }
       ]
     },
@@ -1558,10 +1570,10 @@
       "metadata": {
         "id": "3WTeu0_mdwfo",
         "colab_type": "code",
-        "outputId": "16ce3315-babb-479b-8c41-cf2aca3ba842",
+        "outputId": "02b47c72-d6e5-4ba5-b917-542207f4de91",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 241
         }
       },
       "source": [
@@ -1574,7 +1586,7 @@
         "# after one-hot encoding\n",
         "X_train.head()"
       ],
-      "execution_count": 161,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1603,6 +1615,14 @@
               "      <th>BOROUGH_2</th>\n",
               "      <th>BOROUGH_5</th>\n",
               "      <th>BOROUGH_1</th>\n",
+              "      <th>NEIGHBORHOOD_OTHER</th>\n",
+              "      <th>NEIGHBORHOOD_FLUSHING-NORTH</th>\n",
+              "      <th>NEIGHBORHOOD_EAST NEW YORK</th>\n",
+              "      <th>NEIGHBORHOOD_BEDFORD STUYVESANT</th>\n",
+              "      <th>NEIGHBORHOOD_FOREST HILLS</th>\n",
+              "      <th>NEIGHBORHOOD_BOROUGH PARK</th>\n",
+              "      <th>NEIGHBORHOOD_ASTORIA</th>\n",
+              "      <th>BUILDING_CLASS_CATEGORY_01 ONE FAMILY DWELLINGS</th>\n",
               "      <th>TAX_CLASS_AT_PRESENT_1</th>\n",
               "      <th>TAX_CLASS_AT_PRESENT_1D</th>\n",
               "      <th>BLOCK</th>\n",
@@ -1626,6 +1646,14 @@
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "      <td>5495</td>\n",
               "      <td>801</td>\n",
               "      <td>11230.0</td>\n",
@@ -1643,6 +1671,14 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>7918</td>\n",
@@ -1664,6 +1700,14 @@
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "      <td>4210</td>\n",
               "      <td>19</td>\n",
               "      <td>10461.0</td>\n",
@@ -1683,6 +1727,14 @@
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "      <td>5212</td>\n",
               "      <td>69</td>\n",
               "      <td>11226.0</td>\n",
@@ -1700,6 +1752,14 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>7930</td>\n",
@@ -1724,13 +1784,13 @@
               "108          1          0  ...      1899.0                          1\n",
               "111          1          0  ...      1940.0                          1\n",
               "\n",
-              "[5 rows x 16 columns]"
+              "[5 rows x 24 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 161
+          "execution_count": 182
         }
       ]
     },
@@ -1749,7 +1809,7 @@
       "metadata": {
         "id": "Jc-o-4jJeITu",
         "colab_type": "code",
-        "outputId": "2eed3b22-7176-484b-bd04-0ce27c0b6e5a",
+        "outputId": "7db7b05f-d311-44ca-f1dc-a2c3222bb71b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1757,13 +1817,13 @@
       },
       "source": [
         "from sklearn.feature_selection import f_regression, SelectKBest\n",
-        "selector = SelectKBest(score_func = f_regression, k = 7)\n",
+        "selector = SelectKBest(score_func = f_regression, k = 10)\n",
         "\n",
         "X_train_selected = selector.fit_transform(X_train, y_train)\n",
         "X_test_selected = selector.transform(X_test)\n",
         "X_train_selected.shape, X_test_selected.shape"
       ],
-      "execution_count": 162,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "stream",
@@ -1785,13 +1845,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "((2507, 7), (644, 7))"
+              "((2507, 10), (644, 10))"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 162
+          "execution_count": 184
         }
       ]
     },
@@ -1804,6 +1864,20 @@
       "source": [
         "**4.**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xrhwvILYYjP4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.preprocessing import scale\n",
+        "X_Scaled = scale(X_train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1820,33 +1894,56 @@
       "metadata": {
         "id": "h7uHmSiWjaCW",
         "colab_type": "code",
-        "outputId": "e0e0bd18-8e21-4b01-fd90-7bf41b986fc7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "from sklearn.linear_model import Ridge\n",
-        "from sklearn.metrics import mean_squared_error\n",
         "\n",
         "ridge_reg = Ridge().fit(X_train, y_train)\n",
-        "y_pred = ridge_reg.predict(X_test)\n",
-        "mean_squared_error(y_test, y_pred)"
+        "y_pred = ridge_reg.predict(X_test)"
       ],
-      "execution_count": 163,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n6iuBgGVaCwL",
+        "colab_type": "text"
+      },
+      "source": [
+        "**6.**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vEl9darOZyG8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a90d3f76-d686-4660-fa20-3016ff6a7fad"
+      },
+      "source": [
+        "from sklearn.metrics import mean_absolute_error\n",
+        "\n",
+        "mean_absolute_error(y_test, y_pred)"
+      ],
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "57532040592.70641"
+              "160506.64794815844"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 163
+          "execution_count": 189
         }
       ]
     }
