--- a/module4/LSDS_214L_Regression_Classification_4.ipynb
+++ b/module4/LSDS_214L_Regression_Classification_4.ipynb
@@ -1707,6 +1707,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply the model to new data\n",
+    "y_pred = log_reg.predict(X_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
