Update Jean Fraga DS8_Sprint_Challenge_5_Regression_Classification.ipynb

--- a/Sprint Challenge Unit 2/Jean Fraga DS8_Sprint_Challenge_5_Regression_Classification.ipynb
+++ b/Sprint Challenge Unit 2/Jean Fraga DS8_Sprint_Challenge_5_Regression_Classification.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -132,7 +132,7 @@
        "Name: made_donation_in_march_2007, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -501,7 +501,7 @@
        "29                           21                            0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -550,7 +550,7 @@
        "((561, 5), (187, 5))"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -610,7 +610,7 @@
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
        "                     tol=0.0001, verbose=0)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "0.7433155080213903"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 579,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1247,7 +1247,7 @@
        "Yr_Sold            2010     2010     2010     2010     2010"
       ]
      },
-     "execution_count": 580,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 582,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
        "58149.927741208136"
       ]
      },
-     "execution_count": 583,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1531,7 @@
        "180383.689738292"
       ]
      },
-     "execution_count": 585,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1551,7 @@
        "0.0"
       ]
      },
-     "execution_count": 586,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
        "((1920, 47), (644, 47), (340, 47))"
       ]
      },
-     "execution_count": 588,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1885,7 @@
        "Neighborhood    1920     28    NAmes   290"
       ]
      },
-     "execution_count": 589,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1910,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1923,12 +1923,12 @@
     "X_val = val[features]\n",
     "y_val = val[target]\n",
     "X_test = test[features]\n",
-    "y_test = val[target]"
+    "y_test = test[target]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1937,7 +1937,7 @@
        "((1920, 46), (644, 46), (340, 46))"
       ]
      },
-     "execution_count": 591,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -2404,7 +2404,7 @@
        "Yr_Sold            2008     2008     2008     2008     2008"
       ]
      },
-     "execution_count": 592,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2415,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2470,7 +2470,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 593,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2493,7 +2493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 48,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 49,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2536,7 +2536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 596,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2545,7 +2545,7 @@
        "(1920, 217)"
       ]
      },
-     "execution_count": 596,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2556,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2565,7 +2565,7 @@
        "(644, 217)"
       ]
      },
-     "execution_count": 597,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2576,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2585,7 +2585,7 @@
        "(340, 217)"
       ]
      },
-     "execution_count": 598,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2596,7 +2596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -2668,7 +2668,7 @@
        "Length: 217, dtype: float64"
       ]
      },
-     "execution_count": 610,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2680,16 +2680,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((644,), (1920,), (644,))"
+       "((340,), (1920,), (644,))"
       ]
      },
-     "execution_count": 600,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2700,16 +2700,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "143493.4587675296"
+       "332834.05696210207"
       ]
      },
-     "execution_count": 601,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2720,22 +2720,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-893.9930157381946"
+       "-0.0008749914429284633"
       ]
      },
-     "execution_count": 602,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r2_score(y_val, y_pred)"
+    "r2_score(y_pred, y_val)"
    ]
   },
   {
@@ -2752,7 +2752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
@@ -2763,7 +2763,7 @@
        "(644,)"
       ]
      },
-     "execution_count": 603,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2775,7 +2775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2784,7 +2784,7 @@
        "143493.4587675296"
       ]
      },
-     "execution_count": 604,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2795,7 +2795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 61,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2806,21 +2806,21 @@
     {
      "data": {
       "text/plain": [
-       "-893.9930157381946"
+       "-0.004704903502667834"
       ]
      },
-     "execution_count": 605,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r2_score(y_val, y_pred)\n"
+    "r2_score(y_pred, y_val)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2837,7 +2837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2846,7 +2846,7 @@
        "(644,)"
       ]
      },
-     "execution_count": 679,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2858,7 +2858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2867,7 +2867,7 @@
        "332834.05696210207"
       ]
      },
-     "execution_count": 680,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2878,27 +2878,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-5483.926984248809"
+       "-0.0008749914429284633"
       ]
      },
-     "execution_count": 681,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r2_score(y_val, y_pred)"
+    "r2_score(y_pred, y_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -3127,7 +3127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
