--- a/module4/assignment_regression_classification_4.ipynb
+++ b/module4/assignment_regression_classification_4.ipynb
@@ -1179,7 +1179,7 @@
     }
    ],
    "source": [
-    "y_pred = estimator.predict(X_test)\n",
+    "y_pred = baseline_prediction.predict(X_test)\n",
     "sample_submission = pd.read_csv('sample_submission.csv')\n",
     "submission = sample_submission.copy()\n",
     "submission['status_group'] = y_pred\n",
